<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.24">
  <DUT Name="ST_UAMethodCall_CallInOut1DimParam" Id="{255467a5-40be-4f32-aa0e-03a25865880b}">
    <Declaration><![CDATA[TYPE ST_UAMethodCall_CallInOut1DimParam :
STRUCT
	nNumberOfOutputArguments	: UDINT;
	nReserved					: ARRAY [1..4] OF BYTE; // padding
	stOutputArgInfo				: ARRAY [1..1] OF ST_UAMethodArgInfo;
	//If dynamic out params are in front of others: they need to be memcpyed afterwards.
	//OutputData					: ARRAY [1..8] OF BYTE;
	//This testmethod just returns 2 DINTs so we could directly define them here
	output1						: DINT;
	output2						: DINT;  
	output3						: DINT;  
END_STRUCT
END_TYPE
]]></Declaration>
    <ObjectProperties />
  </DUT>
</TcPlcObject>